using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MovementAnimationStatus : AnimationStatus
{
    public bool isIdle;
    public bool isMoving;
    public bool isFacingRight;
    public bool isFacingLeft;
    public bool isFacingDown;
    public bool isFacingUp;
}
